# sigmond_scripts

./: .gitignore  README.md  setup.cfg
analysis/: launcher.py  run_sigmond.py
analysis/data_handling/: correlator_data.py  data_files.py  data_handler.py
analysis/operator_info/: channel.py  isospin.py  operator.py  operator_set.py
analysis/sigmond_info/: fit_info.py  sigmond_info.py  sigmond_input.py  sigmond_log.py
analysis/tasks/: anisotropy.py  average_corrs.py  dispersion.py  fit_correlators.py  reconstruct_fit_ratio.py  rotate_correlators.py  spectrum.py  task.py  view_data.py
analysis/utils/: grace2pdf.sh  menu.py  plotting.py  util.py
data_conversion/C103/: check_data.py  defs.py  ensembles.xml  mismatches.py  sourceTimeList.py  sourceTimeList_r005.py  sourceTimeList_r007.py  to_hdf5.py  to_hdf5_albert.run  to_hdf5_ave.py  to_hdf5_ave_src_albert.run  to_hdf5_ave_src_equiv_albert.run  to_sigmond.py  to_sigmond_make_herm.py
data_conversion/D200/: check_occurences.py  defs.py  ensembles.xml  excluded_ops.py  from_hdf5_to_sigmond.py  mismatches.py  missing_sh_ops.py  to_hdf5.py  to_hdf5.py.old  to_sigmond.py
data_conversion/J303/: defs.py  ensembles.xml  to_hdf5.py
data_conversion/dibaryon/: convert_to_sigmond.py  defs.py  ensembles.xml  operators_S-2  operators_S0
data_conversion/dimeson/: convert_to_sigmond.py  defs.py
data_conversion/general/: defs.py  to_hdf5.py
data_conversion/ib/: convert_to_sigmond.py
data_conversion/kpi/: defs.py  ensembles.xml  kpi_to_hdf5.py  (+3 more)
data_conversion/kpi-twist/: defs.py  to_hdf5.py
doc/: analysis.tex
(+72 files in other folders)
