[metadata]
name = sigmond_scripts
version = 1.0.0
author = Drew Hanlon
author_email = ahanlon@bnl.gov
description = Supporting functions for handling the c++ library sigmond
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
project_urls =
    Docs = https://docs.example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
